<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="btn1">Demo 1 - simple dialog</string>
    <string name="btn2">Demo 2 - buttons dialog</string>
    <string name="btn3">Demo 3 - Text Input dialog</string>
    <string name="btn4">Exercise 3</string>
    <string name="tv2">Enter some text</string>
    <string name="tv3">Enter Number 1:</string>
    <string name="tv4">Enter Number 2:</string>
    <string name="btn5">Demo 4 - datepicker dialogue:</string>
    <string name="btn6">Demo 5 - timepicker dialogue:</string>

</resources>